# 2025-Cosmic-Motor-Power-Analysis

./: .gitignore  README.md  analyzer.py  requirements.txt
csvify/: CMakeLists.txt  package.xml
csvify/src/: motor_info_to_csv.cpp
raw/: hopper_act.info.csv  trencher.info.csv
raw/lance-1.5/: hopper_belt.info.csv  track_left.info.csv  track_right.info.csv
raw/lance2-UCF-1/: lance_hopper_act_info.csv  lance_hopper_act_left_info.csv  lance_hopper_act_right_info.csv  lance_hopper_belt_info.csv  lance_track_left_info.csv  lance_track_right_info.csv  lance_trencher_info.csv
